<?xml version="1.0" encoding="utf-8"?>
<net.sunniwell.aar.focuscontrol.layout.FocusControlScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    app:defFocusId="@id/btn_5"
    app:recordFocusEnabled="false"
    app:searchFocusDown="@id/btn_1"
    app:searchFocusUp="@id/btn_7">

    <net.sunniwell.aar.focuscontrol.layout.FocusControlLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:recordFocusEnabled="false">

        <Button
            android:id="@+id/btn_1"
            style="@style/btn_normal"
            android:text="@string/btn_1">

            <requestFocus />
        </Button>

        <Button
            android:id="@+id/btn_2"
            style="@style/btn_normal"
            android:text="@string/btn_2" />

        <Button
            android:id="@+id/btn_3"
            style="@style/btn_normal"
            android:text="@string/btn_3" />

        <Button
            android:id="@+id/btn_4"
            style="@style/btn_normal"
            android:text="@string/btn_4" />

        <Button
            android:id="@+id/btn_5"
            style="@style/btn_normal"
            android:text="@string/btn_5" />

        <Button
            android:id="@+id/btn_6"
            style="@style/btn_normal"
            android:text="@string/btn_6" />

        <Button
            android:id="@+id/btn_7"
            style="@style/btn_normal"
            android:text="@string/btn_7" />

        <include layout="@layout/include_test_1" />

        <include layout="@layout/include_test_1" />

        <include layout="@layout/include_test_1" />

        <include layout="@layout/include_test_1" />

        <include layout="@layout/include_test_1" />

        <include layout="@layout/include_test_1" />

        <include layout="@layout/include_test_1" />

        <include layout="@layout/include_test_1" />

        <include layout="@layout/include_test_1" />

        <include layout="@layout/include_test_1" />

        <Button style="@style/btn_normal" />

        <Button style="@style/btn_normal" />

        <Button style="@style/btn_normal" />

        <Button style="@style/btn_normal" />

        <Button style="@style/btn_normal" />

        <Button style="@style/btn_normal" />

        <Button style="@style/btn_normal" />

        <Button style="@style/btn_normal" />

        <Button style="@style/btn_normal" />

        <Button style="@style/btn_normal" />
    </net.sunniwell.aar.focuscontrol.layout.FocusControlLinearLayout>
</net.sunniwell.aar.focuscontrol.layout.FocusControlScrollView>